samples/_failures_safe/1761320650_e77a31_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_26bfdcaf.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_26bfdcaf.c:168:13: error: expected ‘:’ or ‘...’ at end of input
  168 |             case TOKEN_IDENTIFIER
      |             ^~~~
./samples/SAFE/__tmp_26bfdcaf.c:168:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_26bfdcaf.c:168:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_26bfdcaf.c:168:13: error: expected declaration or statement at end of input
